Add extra info below header and reset values to empty

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div>
     <div id="game-div">
       <h1>Rock Paper Scissors</h1>
+      <h2>First to 5 wins</h2>
       <div class="info-div">
         <h2 id="game-message"></h2>
         <div class="results-div">
